# aoc-2018

./: .gitmodules  README.md
cmake_modules/: Unity.cmake  common.cmake
common/: CMakeLists.txt  aoc_err.c  aoc_err.h  aoc_streams.h  common.c  common.h  common_mocks.c  common_mocks.h  dllist.c  dllist.h  main.c  main.h  mm_files.c  mm_files.h  test_aoc_err.c  test_common.c  test_dllist.c  test_main.c  test_main_integration.c  test_mm_files.c  test_tokenizer.c  tokenizer.c  tokenizer.h
common/testfiles_main_integration/: four_lines.txt
common/testfiles_mm_files/: multi_line.txt
day_01/: CMakeLists.txt  chronal_calibration.c  chronal_calibration.h  day_01.c  test_day_01.c
day_02/: CMakeLists.txt  day_02.c  inventory_mgmt.c  inventory_mgmt.h  test_day_02.c
day_03/: CMakeLists.txt  cloth_cutting.c  cloth_cutting.h  day_03.c  test_day_03.c
day_04/: CMakeLists.txt  day_04.c  repose_record.c  repose_record.h  test_day_04.c
